5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1831_1640.log
== TEST (2019-06-13 16:13:01) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(N, dtype = int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:11) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(N, dtype = int)
print(result)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:17) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(N, dtype = int)
print(result)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:21) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(, dtype = int)
print(result)
-- ERROR:
File "XXXX", line 3
    result = zeros(, dtype = int)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:35) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
print(result)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:49) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
print(result + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:52) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
print(result + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:10) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar % 2 = 1)


-- ERROR:
File "XXXX", line 7
    if(nimpar % 2 = 1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:13) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar % 2 = 1):
		


-- ERROR:
File "XXXX", line 7
    if(nimpar % 2 = 1):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:02) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar % 2 ==1 )


-- ERROR:
File "XXXX", line 7
    if(nimpar % 2 ==1 )
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:05) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar % 2 ==1 ):


-- ERROR:
File "XXXX", line 9
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:13) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar % 2 ==1 ):
-- ERROR:
File "XXXX", line 8
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:43) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar % 2 == 1 ):
		
-- ERROR:
File "XXXX", line 9
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:25) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar[i]) == (2 % == 1)
		
-- ERROR:
File "XXXX", line 7
    if(nimpar[i]) == (2 % == 1)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:27) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar[i]) == (2 % == 1):
		
-- ERROR:
File "XXXX", line 7
    if(nimpar[i]) == (2 % == 1):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:37) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar[i])
		
-- ERROR:
File "XXXX", line 7
    if(nimpar[i])
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:39) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
result = zeros(5, dtype = int)
turmas = 0

for i in range(size(nimpar)):
	if(nimpar[i]):
		
-- ERROR:
File "XXXX", line 9
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:46) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))

turmas = 0

for i in range(size(nimpar)):
	if(
		
-- ERROR:
File "XXXX", line 9
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:54) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if(
		
-- ERROR:
File "XXXX", line 8
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:55) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if(
		
-- ERROR:
File "XXXX", line 8
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:50) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( %2 == 0)
		
-- ERROR:
File "XXXX", line 6
    if( %2 == 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:45) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i]% 2 ==1):
		
-- ERROR:
File "XXXX", line 8
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:49) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i]% 2 == 1):
		
-- ERROR:
File "XXXX", line 8
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:51) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		
-- ERROR:
File "XXXX", line 8
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:15) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		
		
-- ERROR:
File "XXXX", line 9
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:50) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[0] = turmas[0] + 1
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:01) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[0] = turmas[0] + 1
print(turmas)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:13) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[0] = turmas[0] + 1
   print(turmas)
		
		
-- ERROR:
File "XXXX", line 8
    print(turmas)
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:17) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[0] = turmas[0] + 1
      print(turmas)
		
		
-- ERROR:
File "XXXX", line 8
    print(turmas)
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:19) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[0] = turmas[0] + 1
         print(turmas)
		
		
-- ERROR:
File "XXXX", line 8
    print(turmas)
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:04) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
result = zeros(turmas, dtype = int)

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[0] = turmas[0] + 1
print(turmas)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:09) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
result = zeros(turmas, dtype = int)

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[0] = turmas[0] + 1
print(turmas)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:19) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
result = zeros(turmas, dtype = int)

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[0] = turmas[0] + 1
print(i)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:32) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
result = zeros(turmas, dtype = int)

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[0] = turmas[0] + 1
print(i)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:55) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
result = zeros(turmas, dtype = int)

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[i] = turmas[i] + 1
print(i)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:01) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
result = zeros(turmas, dtype = int)

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[i] = turmas[i] + 1
print(i)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:09) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
result = zeros(turmas, dtype = int)

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[i] = turmas[i] + 1
print(i)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:19) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
result = zeros(turmas, dtype = int)

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		turmas[i] = turmas[i] + 1
print(i)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:11) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
result = zeros(turmas, dtype = int)

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		result = result + 1
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:29) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		result = result + 1
result = zeros(turmas , dtype = int)		

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:15) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar))

		
		
-- ERROR:
File "XXXX", line 10
    for i in range(0 , size(nimpar))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:19) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar)):

		
		
-- ERROR:
File "XXXX", line 14
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:07) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar)):
	if (nimpar )

		
		
-- ERROR:
File "XXXX", line 11
    if (nimpar )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:32) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0

for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar)):
	if (nimpar )

		
		
-- ERROR:
File "XXXX", line 11
    if (nimpar )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:19) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
nimpar1 = nimpar1 % 2 == 1
for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar)):
	if (nimpar )

		
		
-- ERROR:
File "XXXX", line 11
    if (nimpar )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:46) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
nimpar1 = nimpar1 % 2 == 1
for i in range(size(nimpar)):
	if( nimpar[i] % 2 == 1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar)):
	if (nimpar != nimpar1 ):
		

		
		
-- ERROR:
File "XXXX", line 16
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:04) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
nimpar1 = nimpar1 % 2 == 1
for i in range(size(nimpar)):
	if( nimpar[i] == nimpar1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar)):
	if (nimpar != nimpar1 ):
		
		

		
		
-- ERROR:
File "XXXX", line 17
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:14) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
nimpar1 = nimpar1 % 2 == 1
for i in range(size(nimpar)):
	if( nimpar[i] == nimpar1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar)):
	if (nimpar != nimpar1 ):
	print(result)
		
		
		

		
		
-- ERROR:
File "XXXX", line 12
    print(result)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:18) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
nimpar1 = nimpar1 % 2 == 1
for i in range(size(nimpar)):
	if( nimpar[i] == nimpar1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar)):
	if (nimpar != nimpar1 ):
print(result)
		
		
		

		
		
-- ERROR:
File "XXXX", line 12
    print(result)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:49) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
nimpar1 = nimpar1 % 2 == 1
for i in range(size(nimpar)):
	if( nimpar[i] == nimpar1):
		result = result + 1
result = zeros(turmas , dtype = int)	

for i in range(0 , size(nimpar)):
	if (nimpar != nimpar1 ):
print(result)
		
		
		

		
		
-- ERROR:
File "XXXX", line 12
    print(result)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:44) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
nimpar1 = nimpar1 % 2 == 1
for i in range(size(nimpar)):
	if( nimpar[i] == nimpar1):
		result = result + 1
result = zeros(turmas , dtype = int)	
print(result)



		
		
		

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:48) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
nimpar1 = nimpar1 % 2 == 1
for i in range(size(nimpar)):
	if( nimpar[i] == nimpar1):
		result = result + 1
result = zeros(turmas , dtype = int)	
print(result)



		
		
		

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:58) 
-- CODE:
from numpy import*
nimpar = array(eval(input("Alunos: ")))
turmas = 0
nimpar1 = nimpar1 % 2 == 1
for i in range(size(nimpar)):
	if( nimpar[i] == nimpar1):
		result = result + 1
result = zeros(turmas , dtype = int)	
print(result)



		
		
		

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
